additional actuator info